crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__predicates__select_where_in_column.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "series": [
          1,
          2,
          3,
          4,
          5
        ]
      }
    ]
  },
  {
    "rows": []
  }
]
